--- a/style.css
+++ b/style.css
@@ -24,18 +24,17 @@
 
 }
 
-#cell1,#cell2,#cell3 {
+.lunch-cell {
     width:100px;
     height:100px;
     border:3px solid black;
     float: left;
-
 }
 
 #cell4,#cell5,#cell6 {
     width:100px;
     height:100px;
-float: left;
+    float: left;
     border:3px solid black;
 }
 
